# plattus

./: .coveragerc  .travis.yml  README.md  setup.cfg  setup.py  tox.ini
src/plattus/flatbuffers/schema/: flatbuffer.lark  grammar.py
tests/flatbuffers/: test_schema_grammar.py
