[bdist_wheel]
universal = 1


[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE

[aliases]
test=pytest

[coverage:run]
omit = */tests/*

[isort]
atomic=true
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py

known_first_party=plattus
known_third_party=pytest,setuptools,six,hypothesis

[tox]
envlist = py27,py37,pypy,coverage-report


[testenv:coverage-report]
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report

[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra
testpaths = tests
filterwarnings =
    once::Warning

[flake8]
max-line-length = 90
